--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 dash==2.18.2
-numpy==1.23.5
+numpy==2.2.3
 pandas==1.5.3
 scikit_learn==1.6.1
 scipy==1.15.2
 matplotlib==3.10.1
 seaborn==0.13.2
 skimpy==0.0.8
+openpyxl == 3.1.2
+sqlalchemy==2.0.12
+psycopg2 == 2.9.6
